# openmetadata

./: .gitignore
clickhouse_docker/: docker-compose.yml
openmetadata/: cfg.py  create_filters.py  create_ingestion.py  create_service.py
openmetadata/gs_integration/: google_api.py  main.py
openmetadata_docker/: Dockerfile  docker-compose.yml
openmetadata_docker/custom_ingestors/: pyproject.toml
openmetadata_docker/custom_ingestors/custom_ingestors/: __init__.py  clickhouse.py
openmetadata_docker/custom_ingestors/custom_ingestors/gs_integration/: google_api.py  gs_collector.py  main.py
